bugfix sound toggle btn on mobile

--- a/src/styles/ResultScreen.css
+++ b/src/styles/ResultScreen.css
@@ -10,6 +10,7 @@ html, body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  z-index: 10;
 }
 
 .video-overlay-container video {
@@ -108,6 +109,9 @@ html, body {
   max-width: 80%;
 }
 
+.results-screen video {
+  z-index: 10;
+}
 .result-title {
   font-size: 2rem;
 }
